--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script src="main.js"></script>
 </head>
 
-<body>
-    <h5 id="title">United States GDP Over Time</h5>
-</body>
+<body></body>
 
 
 </html>
