--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualize Data With Bar Chart</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="main.js"></script>
 </head>
 
-<body></body>
+<body>
+    <br />
+    <h1>United States GDP Over Time</h1>
+</body>
 
 
 </html>
