--- a/DVScatteplot/index.html
+++ b/DVScatteplot/index.html
@@ -7,10 +7,12 @@
     <title>Visualize Data With a Scatterplot Graph</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </head>
 
 <body>
+    <h1>Doping in Professional Bicycle Racing</h1>
+    <p>35 Fastest times up Alpe d'Huez</p>
 </body>
 
 
