Adding transition styling

--- a/DVScatteplot/index.html
+++ b/DVScatteplot/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
+    <br />
+    <br />
+    <br />
     <h1>Doping in Professional Bicycle Racing</h1>
-    <p>35 Fastest times up Alpe d'Huez</p>
+    <h3>35 Fastest times up Alpe d'Huez</h3>
 </body>
 
 
