Adding home button

--- a/DVScatteplot/index.html
+++ b/DVScatteplot/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <br />
-    <br />
-    <br />
+    <p class="homeBtn"><a href="../">Home</a></p>
     <h1>Doping in Professional Bicycle Racing</h1>
     <h3>35 Fastest times up Alpe d'Huez</h3>
+
 </body>
 
 
