Adding home button

--- a/DVBarChart/index.html
+++ b/DVBarChart/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <br />
+    <p class="homeBtn"><a href="../">Home</a></p>
     <h1>United States GDP Over Time</h1>
 </body>
 
