Fixing quick links

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <h1>Quick Links</h1>
-    <p><a href="./DVBarChart/">Bar Chart</a></p>
-    <p><a href="./DVScatteplot/">Scatterplot</a></p>
-    <p><a href="./DVHeatMap/">Heat Map</a></p>
-    <p><a href="./DVHeatMap/">Choropleth Map</a></p>
-    <p><a href="./DVHeatMap/">Treemap Diagram</a></p>
+    <p><a href="./BarChart/">Bar Chart</a></p>
+    <p><a href="./Scatteplot/">Scatterplot</a></p>
+    <p><a href="./HeatMap/">Heat Map</a></p>
+    <p><a href="./HeatMap/">Choropleth Map</a></p>
+    <p><a href="./HeatMap/">Treemap Diagram</a></p>
 </body>
 
 
