--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -16,6 +16,7 @@
 <body>
     <p class="homeBtn"><a href="../">Home</a></p>
     <h1>United States GDP Over Time</h1>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 
