--- a/HeatMap/index.html
+++ b/HeatMap/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="./main.js"></script>
+    
 </head>
 
 <body>
     <p class="homeBtn"><a href="../">Home</a></p>
     <h1>Monthly Global Land-Surface Temperature</h1>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 
