--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p><a href="./BarChart/">Bar Chart</a></p>
     <p><a href="./Scatteplot/">Scatterplot</a></p>
     <p><a href="./HeatMap/">Heat Map</a></p>
-    <p><a href="./HeatMap/">Choropleth Map</a></p>
-    <p><a href="./HeatMap/">Treemap Diagram</a></p>
+    <p><a href="./ChoroplethMap/">Choropleth Map</a></p>
+    <p><a href="./Treemap/">Treemap Diagram</a></p>
 </body>
 
 
