--- a/ChoroplethMap/index.html
+++ b/ChoroplethMap/index.html
@@ -7,8 +7,8 @@
     <title>Visualize Data With a Scatterplot Graph</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
     <script src="./main.js"></script>
-    
 </head>
 
 <body>
