Updating index titles

--- a/ChoroplethMap/index.html
+++ b/ChoroplethMap/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualize Data With a Scatterplot Graph</title>
+    <title>Visualize Data With a Choropleth Map</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
