--- a/Treemap/index.html
+++ b/Treemap/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualize Data With a Scatterplot Graph</title>
+    <title>Visualize Data With a Treemap</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="./main.js"></script>
-    
 </head>
 
 <body>
