--- a/Treemap/index.html
+++ b/Treemap/index.html
@@ -13,6 +13,7 @@
 <body>
     <p class="homeBtn"><a href="../">Home</a></p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <div class="heading"></div>
 </body>
 
 
