--- a/Treemap/index.html
+++ b/Treemap/index.html
@@ -13,7 +13,9 @@
 <body>
     <p class="homeBtn"><a href="../">Home</a></p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <div class="heading"></div>
+    <div id="heading"></div>
+    <div id="main-content">
+    </div>
 </body>
 
 
